# coalescence

./: LICENSE  coalescence.py  expression.py  parser.py  proof.py  test_coalescence.py  test_parser.py  utils.py
python/: coalescence.py  expression.py  parser.py  test_expression.py  test_parser.py  test_proof.py
rust/: Cargo.toml
rust/benches/: bench.rs
rust/examples/: main.rs
rust/src/: coalesceable.rs  coalescence.rs  expression.rs  lib.rs  main.rs  parseable.rs  parser.rs  proof.rs  proveable.rs
rust/tests/: coalesceable.rs  expression.rs  parseable.rs  proveable.rs
